--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "@backstage/backend-defaults": "^0.11.1",
+    "@backstage/catalog-client": "^1.10.2",
     "@backstage/config": "^1.3.3",
+    "@backstage/integration": "^1.17.1",
     "@backstage/plugin-app-backend": "^0.5.4",
     "@backstage/plugin-auth-backend": "^0.25.2",
     "@backstage/plugin-auth-backend-module-github-provider": "^0.3.5",
@@ -42,11 +44,13 @@
     "@backstage/plugin-techdocs-backend": "^2.0.4",
     "app": "link:../app",
     "better-sqlite3": "^9.0.0",
+    "express": "^5.1.0",
     "node-gyp": "^10.0.0",
     "pg": "^8.11.3"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.33.1"
+    "@backstage/cli": "^0.33.1",
+    "@types/express": "^5"
   },
   "files": [
     "dist"
